# hmt-base

./: Makefile  README.md  hmt-base.cabal
Music/Theory/: Amplitude.hs  Array.hs  Base.hs  Bits.hs  Bool.hs  Braille.hs  Byte.hs  ByteString.hs  Char.hs  Colour.hs  Combinations.hs  Concurrent.hs  Directory.hs  Either.hs  Enum.hs  Function.hs  Geometry.hs  Graph.hs  Hugs.hs  IO.hs  Io.hs  Json.hs  List.hs  Map.hs  Markdown.hs  Math.hs  Maybe.hs  Monad.hs  Opt.hs  Ord.hs  Permutations.hs  Read.hs  Show.hs  String.hs  Time.hs  Traversable.hs  Tree.hs  Tuple.hs  Unicode.hs
Music/Theory/Array/: CSV.hs  Cell_Ref.hs  Csv.hs  Json.hs  Square.hs  Text.hs
Music/Theory/Colour/: Crayola.hs  Grey.hs  Morley.hs  Names.hs  Ncs.hs  Planck.hs  Ral.hs  Ryb.hs  Svg.hs  Vga.hs
Music/Theory/Db/: Cli.hs  Common.hs  Csv.hs  Json.hs  Plain.hs
Music/Theory/Directory/: Find.hs
Music/Theory/Geometry/: Bezier.hs  Bivector.hs  Functions.hs  Hermite.hs  Hex.hs  Matrix.hs  Obj.hs  Off.hs  Picture.hs  Ply.hs  Polygon.hs  Polyhedron.hs  Projection.hs  Quaternion.hs  Surface.hs  Tutte.hs  Vector.hs
Music/Theory/Geometry/Bezier/: Spencer.hs
Music/Theory/Geometry/Cartography/: Projections.hs
Music/Theory/Geometry/Picture/: Svg.hs
Music/Theory/Geometry/Projection/: Gl.hs
Music/Theory/Graph/: Bliss.hs  Dot.hs  G6.hs  LCF.hs  LGL.hs  Lcf.hs  Lgl.hs  Planar.hs  Type.hs
Music/Theory/Image/: Svg.hs
Music/Theory/Math/: Constant.hs  Convert.hs  Histogram.hs  Nichomachus.hs  Oeis.hs  Predicate.hs  Prime.hs  Z.hs
Music/Theory/Math/Prime/: List.hs
Music/Theory/Permutations/: List.hs
Music/Theory/Set/: List.hs  Set.hs
Music/Theory/Time/: Duration.hs  Notation.hs  Seq.hs
cmd/: Makefile  db.hs  gl.hs  gr-planar.cpp  obj.hs  ply.hs
md/: db.md  gl.md  gr-planar.md  obj.md  ply.md
