cabal-version:     2.4
Name:              hmt-base
Version:           0.21
Synopsis:          Haskell Music Theory Base
Description:       Haskell music theory Base Library
License:           GPL-3.0-only
Category:          Music
Copyright:         Rohan Drape, 2006-2023
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hmt-base
Tested-With:       GHC == 9.6.1
Build-Type:        Simple
Data-files:        README.md

Library
  Build-Depends:   array,
                   base >= 4.9 && < 5,
                   bytestring,
                   containers,
                   data-memocombinators,
                   data-ordlist,
                   directory,
                   filepath,
                   lazy-csv,
                   microaeson,
                   monad-loops,
                   multiset-comb,
                   primes,
                   process,
                   random,
                   safe,
                   split,
                   text,
                   time
  Default-Language:Haskell2010
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Music.Theory.Array
                   Music.Theory.Array.Cell_Ref
                   Music.Theory.Array.Csv
                   Music.Theory.Array.Text
                   Music.Theory.Base
                   Music.Theory.Bits
                   Music.Theory.Bool
                   Music.Theory.Byte
                   Music.Theory.Combinations
                   Music.Theory.Colour
                   Music.Theory.Concurrent
                   Music.Theory.Directory
                   Music.Theory.Directory.Find
                   Music.Theory.Either
                   Music.Theory.Enum
                   Music.Theory.Function
                   Music.Theory.Geometry.Bezier
                   Music.Theory.Geometry.Bezier.Spencer
                   Music.Theory.Geometry.Bivector
                   Music.Theory.Geometry.Functions
                   Music.Theory.Geometry.Hex
                   Music.Theory.Geometry.Matrix
                   Music.Theory.Geometry.Obj
                   Music.Theory.Geometry.Off
                   Music.Theory.Geometry.Picture
                   Music.Theory.Geometry.Picture.Svg
                   Music.Theory.Geometry.Ply
                   Music.Theory.Geometry.Polygon
                   Music.Theory.Geometry.Polyhedron
                   Music.Theory.Geometry.Projection
                   Music.Theory.Geometry.Projection.Gl
                   Music.Theory.Geometry.Quaternion
                   Music.Theory.Geometry.Tutte
                   Music.Theory.Geometry.Vector
                   Music.Theory.Graph.Bliss
                   Music.Theory.Graph.Dot
                   Music.Theory.Graph.G6
                   Music.Theory.Graph.Lcf
                   Music.Theory.Graph.Lgl
                   Music.Theory.Graph.Planar
                   Music.Theory.Graph.Type
                   Music.Theory.Image.Svg
                   Music.Theory.Io
                   Music.Theory.Json
                   Music.Theory.List
                   Music.Theory.Map
                   Music.Theory.Math
                   Music.Theory.Math.Constant
                   Music.Theory.Math.Convert
                   Music.Theory.Math.Histogram
                   Music.Theory.Math.Nichomachus
                   Music.Theory.Math.Oeis
                   Music.Theory.Math.Prime
                   Music.Theory.Math.Prime.List
                   Music.Theory.Maybe
                   Music.Theory.Monad
                   Music.Theory.Opt
                   Music.Theory.Ord
                   Music.Theory.Permutations
                   Music.Theory.Read
                   Music.Theory.Set.List
                   Music.Theory.Set.Set
                   Music.Theory.Show
                   Music.Theory.String
                   Music.Theory.Time.Duration
                   Music.Theory.Time.Notation
                   Music.Theory.Traversable
                   Music.Theory.Tree
                   Music.Theory.Tuple
                   Music.Theory.Unicode

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hmt-base
